src/test/ui/generator/no-arguments-on-generators.stderr
error[E0628]: generators cannot have explicit arguments
  --> $DIR/no-arguments-on-generators.rs:14:15
   |
LL |     let gen = |start| { //~ ERROR generators cannot have explicit arguments
   |               ^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0628"
